[package]
name = "bittorrent"
version = "0.1.0"
authors = ["Luc Street <lucis-fluxum@users.noreply.github.com>"]
edition = "2018"
publish = false

[dependencies]
bendy = { version = "0.3.2", features = ["serde"] }
chrono = "0.4.11"
either = "1.5.3"
hex = "0.4.2"
log = "0.4.8"
reqwest = { version = "0.10.6", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
sha1 = { version = "0.6.0", features = ["std"] }
thiserror = "1.0.20"
tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "blocking"] }

[dev-dependencies]
dotenv = "0.15.0"
percent-encoding = "2.1.0"
pretty_env_logger = "0.4.0"
