[package]
name = "bittorrent-client"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
bittorrent-proto = { path = "../bittorrent-proto", version = "0.1.0" }
log = "0.4.0"
sha1 = { version = "0.6.0", features = ["std"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
