[package]
name = "bittorrent-proto"
version = "0.1.0"
license = "MPL-2.0"
edition = "2018"
publish = false

[dependencies]
bendy = { version = "0.3.0", features = ["serde"] }
chrono = { version = "0.4.0", default-features = false, features = ["std"] }
either = "1.5.0"
futures-util = { version = "0.3.0", features = ["io"] }
hex = "0.4.0"
log = "0.4.0"
reqwest = { version = "0.11.0", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
sha1 = { version = "0.6.0", features = ["std"] }
thiserror = "1.0.0"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
dotenvy = { version = "0.15.0" }
percent-encoding = "2.1.0"
pretty_env_logger = "0.4.0"
